# my-apps

./: README.md  my-apps.code-workspace
.github/workflows/: ad-automation-daily.yml
ad-automation/: .env.example  .gitignore  CLAUDE.md  HANDOFF_広告運用自動化.md  README.md  requirements.txt
ad-automation/.claude/: launch.json
ad-automation/clients/: benchmarks.json  haruna_thresholds.example.json  yahoo_accounts.example.json  ハルナ美容外科.md
ad-automation/console/: README.md  _worker.js  ad_ops_console.jsx  index.html
ad-automation/docs/: DEPLOY.md  build_design_doc.py  claude-ads.md
ad-automation/routines/: com.sofcom.adops.refresh.plist  daily-check.md
ad-automation/scripts/: YAHOO_SETUP.md  build_audits.py  build_console_data.py  build_proposals.py  monitor.py  (+21 more)
arios/: .env.example  .gitignore  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
banner_create_automation/: .env.example  .gitignore  README.md  pyproject.toml
banner_create_automation/scripts/: smoke_test.py
banner_create_automation/src/banner_app/: __init__.py  config.py  main.py
banner_create_automation/src/banner_app/core/: ai_client.py  exporter.py  renderer.py  template.py
banner_create_automation/src/banner_app/gui/: main_window.py  preview_panel.py
banner_create_automation/templates/: display_160x600.json  display_300x250.json  display_728x90.json  instagram_story.json
llmo-article-factory/: .env.example  .gitignore  CLAUDE.md  FROZEN.md  app.py
my-first-app/: package-lock.json  package.json
staff-goal-tracker/: index.html  sample-crm.csv
(+65 files in other folders)
