[project]
name = "banner-app"
version = "0.1.0"
description = "Instagram / Web ad banner generator with AI background (OpenAI + Gemini Nano Banana)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7",
    "Pillow>=10.3",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "openai>=1.40",
    "google-genai>=0.3",
    "google-auth>=2.30",
]

[project.scripts]
banner-app = "banner_app.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
